--- a/environment.yml
+++ b/environment.yml
@@ -59,4 +59,4 @@ dependencies:
     - tqdm==4.64.1
     - typing-extensions==4.4.0
     - urllib3==1.26.14
-prefix: /nfs/users/ext_sanoojan.baliah/miniconda3/envs/trex
+prefix: ~/miniconda/envs/trex
